<resources>
    <string name="ime_name">Samsung Chinese IME</string>
    <string name="ime_mode_choose">Input Mode</string>
    <string name="ime_settings_activity_name">Samsung Chinese IME setting</string>
    <string name="inputMethod">Input Method</string>
    <string name="version">2.0.0</string>
    <string name="Chinese">中文</string>
    <string name="English">English</string>
    <string name="HK">中文（香港）</string>
    <string name="Korean">한국어</string>
    <string name="language ">Chinese</string>
    <string name="TW">中文（台灣）</string>
    <string name="word_123">123</string>
    <string name="word_cn">中</string>
    <string name="word_cn_hk">HK</string>
    <string name="word_cn_tw">TW</string>
    <string name="word_en">En</string>
    <string name="word_indi_cn">中</string>
    <string name="word_indi_en">ABC</string>
    <string name="word_indi_hk">HK</string>
    <string name="word_indi_ko">ㄱㄴㄷ</string>
    <string name="word_indi_tw">TW</string>
    <string name="word_ko">한</string>
    <string name="symbol_normal_list">",?!'@-/"</string>
    <string name="word_pinyin">拼音</string>
    <string name="word_stroke">笔画</string>
    <string name="word_word_think">" XT9"</string>
    <string name="add">Add</string>
    <string name="alert">Alert</string>
    <string name="browser">Browser</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_callback">Callback</string>
    <string name="call_car">Car</string>
    <string name="call_company_main">Company main</string>
    <string name="call_custom">Call %s</string>
    <string name="call_fax_home">Home fax</string>
    <string name="call_fax_work">Work fax</string>
    <string name="call_home">Home</string>
    <string name="call_isdn">ISDN</string>
    <string name="call_main">Main</string>
    <string name="call_mms">MMS</string>
    <string name="call_mobile">Mobile</string>
    <string name="call_other">Call</string>
    <string name="call_other_fax">Fax</string>
    <string name="call_pager">Pager</string>
    <string name="call_radio">Radio</string>
    <string name="call_telex">Telex</string>
    <string name="call_tty_tdd">TTY/TDD</string>
    <string name="call_work">Work</string>
    <string name="call_work_mobile">Work mobile</string>
    <string name="call_work_pager">Work pager</string>
    <string name="cancel">Cancel</string>
    <string name="cand_udb_del">Delete user created phrase?</string>
    <string name="checkbox_string">Do not show again</string>
    <string name="commonphrase">Common phrase</string>
    <string name="compare">Please input complex abnormal track</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="dialog_title_list_preference">SCH-TCH Switch</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_custom">Email %s</string>
    <string name="email_home">Email home</string>
    <string name="email_mobile">Email mobile</string>
    <string name="email_other">Email</string>
    <string name="email_work">Email work</string>
    <string name="input_language_check">Please at least check one input language</string>
    <string name="inputString">Please input String</string>
    <string name="ok">OK</string>
    <string name="opendial">Open dial</string>
    <string name="openmedia">Open media</string>
    <string name="openphonebook">Open phonebook</string>
    <string name="operationcommand">Command</string>
    <string name="points_empty">There is no track, please input</string>
    <string name="portrait_mode_1">Qwerty keyboard</string>
    <string name="portrait_mode_2">3*4 keyboard</string>
    <string name="portrait_mode_3">Full screen handwriting</string>
    <string name="portrait_mode_4">Box handwriting</string>
    <string name="s_month_1">1 Jan</string>
    <string name="s_month_10">10 Oct</string>
    <string name="s_month_11">11 Nov</string>
    <string name="s_month_12">12 Dec</string>
    <string name="s_month_2">2 Feb</string>
    <string name="s_month_3">3 Mar</string>
    <string name="s_month_4">4 Apr</string>
    <string name="s_month_5">5 May</string>
    <string name="s_month_6">6 Jun</string>
    <string name="s_month_7">7 Jul</string>
    <string name="s_month_8">8 Aug</string>
    <string name="s_month_9">9 Sep</string>
    <string name="samsungime_help">User help</string>
    <string name="samsungime_help_summary">User help</string>
    <string name="saveadd">Save add</string>
    <string name="savemodify">Save modify</string>
    <string name="selectlanguage">Input Language</string>
    <string name="selectorder">Please select order</string>
    <string name="self_define_off">Self Define is off, please open</string>
    <string name="setting">Samsung Chinese IME setting</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_unknown">Unknown</string>
    <string name="setting_adapt_define_title">Self adapt and define</string>
    <string name="setting_adapt_title">Self adapt</string>
    <string name="setting_auto_capitalization_summary">Automatically capitalise first letter of sentence</string>
    <string name="setting_auto_capitalization_title">Auto Capitalisation</string>
    <string name="setting_auto_fullstop_summary">Automatically insert a full stop by tapping the space bar twice when using Qwerty keyboard</string>
    <string name="setting_auto_fullstop_title">Auto-punctuate</string>
    <string name="setting_char_preview_title">Character preview</string>
    <string name="setting_character_preview_title">Character preview</string>
    <string name="setting_clean_user_data_confirm">Do you confirm to clean user data?</string>
    <string name="setting_clean_user_data_title">Clean user data</string>
    <string name="setting_convert_title">SCH-TCH Switch</string>
    <string name="setting_db_update_title">Word database update</string>
    <string name="setting_db_update_action">Database update</string>
    <string name="setting_db_update_auto_title">Automatically update</string>
    <string name="setting_db_update_notice_title">Get notification</string>
    <string name="setting_db_update_notice_summary">Get notification when the new database is availiable</string>
    <string name="setting_db_update_setting">Database update setting</string>
    <string name="setting_db_update_twchinese_dict_title">Chinese(TW)</string>
    <string name="setting_db_update_hkchinese_dict_title">Chinese(HK)</string>
    <string name="setting_db_update_schinese_dict_title">Chinese(Simplified)</string>
    <string name="setting_db_update_english_dict_title">English</string>
    <string name="setting_db_update_popular_dict_title">Popular Words</string>
    <string name="setting_db_update_restore_default">Restore default word database</string>
    <string name="setting_db_update_last_update_time">Last update time:</string>
    <string name="setting_db_update_charge_attention_title">Attention</string>
    <string name="setting_db_update_charge_attention_msg1">Network connection is required to download the word database, this may incur charges.</string>
    <string name="setting_db_update_charge_attention_msg2">To get the notification may incur charges, Countinue?</string>
    <string name="setting_db_update_connect_fail">Can not connect to the network.</string>
    <string name="setting_db_update_download_failed">Dababase update failed.</string>
    <string name="setting_db_update_download_finished">Dababase update finished.</string>
    <string name="setting_db_update_download_timeout">Connection timeout.</string>
    <string name="setting_disabled">Disabled</string>
    <string name="setting_enabled">Enabled</string>
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_general_title">General</string>
    <string name="setting_handwrite">Handwriting setting</string>
    <string name="setting_keypad_type_title">Keyboard type settings</string>
    <string name="setting_language">Input Language</string>
    <string name="setting_language_summary">Input Language</string>
    <string name="setting_link_to_contacts_summary">Display contact in candidate window to quickly bring the contact information</string>
    <string name="setting_link_to_contacts_title">Link to contacts</string>
    <string name="setting_others_title">Others</string>
    <string name="setting_one_hand_mode_key">one_hand_mode_key</string>
    <string name="setting_one_hand_mode_title">One-handed operation</string>
    <string name="setting_one_hand_mode_summary">Set your keyboard for use with one hand</string>
    <string name="setting_pointing_keyboard_summary">Move cursor by sliding finger across keyboard</string>
    <string name="setting_pointing_keyboard_title">Pointing keyboard</string>
    <string name="setting_portrait_input_mode_english_title">English</string>
    <string name="setting_prediction_title">English Prediction</string>
    <string name="setting_qwerty_correct_summary">Touch error can be automatically corrected on Qwerty keypad</string>
    <string name="setting_qwerty_correct_title">Input auto correction</string>
    <string name="setting_reset_setting_title">Reset settings</string>
    <string name="setting_sound_keypress_title">Sound on keypress</string>
    <string name="setting_space_input_title">Space key to input association</string>
    <string name="setting_version_title">Version</string>
    <string name="setting_vibrate_keypress_title">Vibrate on keypress</string>
    <string name="setting_voice_input_summary">Provide button for voice input in keypad</string>
    <string name="setting_voice_input_title">Voice Input</string>
    <string name="setting_about_Category_key">setting_about_Category_key</string>
    <string name="setting_about_key">setting_about_key</string>
    <string name="setting_auto_capitalization_key">setting_auto_capitalization_key</string>
    <string name="setting_auto_fullstop_key">setting_auto_fullstop_key</string>
    <string name="setting_char_preview_key">setting_char_preview_key</string>
    <string name="setting_db_update_key">setting_db_update_key</string>
    <string name="setting_db_update_action_key">setting_db_update_action_key</string>
    <string name="setting_db_update_auto_key">setting_db_update_auto_key</string>
    <string name="setting_db_update_setting_key">setting_db_update_setting_key</string>
    <string name="setting_db_update_notice_key">setting_db_update_notice_key</string>
    <string name="setting_feedback_Category_key">setting_feedback_Category_key</string>
    <string name="setting_language_summary_key">setting_language_summary_key</string>
    <string name="setting_link_to_contacts_key">setting_link_to_contacts_key</string>
    <string name="setting_others_key">setting_others_key</string>
    <string name="setting_key">setting_key</string>
    <string name="setting_keypad_type_key">setting_keypad_type_key</string>
    <string name="setting_pointing_keyboard_key">setting_pointing_keyboard_key</string>
    <string name="setting_portrait_english_input_mode_key">setting_portrait_english_input_mode_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_qwerty_correct_error_key">setting_qwerty_correct_error_key</string>
    <string name="setting_reset_setting_key">setting_reset_setting_key</string>
    <string name="setting_sound_keypress_key">setting_sound_keypress_key</string>
    <string name="setting_space_input_key">setting_space_input_key</string>
    <string name="setting_vibrate_keypress_key">setting_vibrate_keypress_key</string>
    <string name="setting_voice_input_key">setting_voice_input_key</string>
    <string name="setting_keyboard_swipe_key">setting_keyboard_swipe_key</string>
    <string name="setting_keyboard_swipe_key_title">Swipe on keyboard</string>
    <string name="setting_fuzzy_pinyin_input_title">Fuzzy Pinyin Input</string>
</resources>